fix alignment of checkboxes in levelbuilder

--- a/apps/style/code-studio/levelbuilder.scss
+++ b/apps/style/code-studio/levelbuilder.scss
@@ -178,6 +178,7 @@ table.checkboxes {
 
   label {
     padding-left: 1%;
+    margin-top: 15px;
   }
 }
 .collapsed_area_header{
